--- a/style_login.css
+++ b/style_login.css
@@ -630,7 +630,6 @@ div.scrollmenu a:hover {
 .score-benefits .infographic {
   max-width: 150px;
   padding-top: 20px;
-  margin-left: 20px;
   margin-bottom: 20px;
 }
 
@@ -801,6 +800,17 @@ footer {
     margin: auto;
     width: 680px;
   }
+  .pros-cons {
+    margin-top: 55px;
+    margin: auto;
+  }
+  .your-health-score h1 {
+    font-size: 30px;
+    font-weight: 400;
+    padding-top: 24px;
+    margin: auto;
+    text-align: center;
+  }
 }
 
 @media (min-width: 1100px) {
@@ -808,6 +818,17 @@ footer {
     margin: auto;
     margin-top: 24px;
     width: 900px;
+  }
+  .pros-cons {
+    margin-top: 55px;
+    margin: auto;
+  }
+  .your-health-score h1 {
+    font-size: 30px;
+    font-weight: 400;
+    padding-top: 24px;
+    margin: auto;
+    text-align: center;
   }
 }
 
@@ -819,7 +840,41 @@ footer {
   }
 
   .score-benefits {
-    display: flex;
+    display: grid;
+  }
+
+  .pros-cons {
+    margin-top: 55px;
+    margin: auto;
+  }
+  .infographic {
+    max-width: 150px;
+    margin-bottom: 20px;
+    margin-left: 300px;
+  }
+  .your-health-score h1 {
+    font-size: 30px;
+    font-weight: 400;
+    padding-top: 24px;
+    margin: auto;
+    text-align: center;
+  }
+
+  .grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .read-more-2 {
+    text-decoration: none;
+    color: black;
+    text-align: center;
+  }
+
+  .read-more-2:hover {
+    text-decoration: underline;
+    color: black;
+    text-align: center;
   }
 }
 
@@ -908,12 +963,23 @@ footer {
   color: black;
 }
 
+.h2-dashboard {
+  text-align: center;
+  margin-top: 24px;
+  font-weight: 400;
+  font-size: 20px;
+  margin-bottom: 24px;
+}
+
 /* Slider RESPONSIVE GENERAL -  */
 
 @media (min-width: 620px) {
   .boost-health {
     margin: auto;
     width: 580px;
+  }
+  .product-category {
+    text-align: center;
   }
 }
 
@@ -931,15 +997,23 @@ footer {
     position: fixed;
     z-index: 100;
   }
+  .product-category {
+    text-align: center;
+  }
 
-  .boost-health h2 {
+  .h2-dashboard {
     text-align: center;
     margin-top: 24px;
+    font-weight: 400;
+    font-size: 24px;
   }
 
   .boost-health hr {
     margin: auto;
     margin-bottom: 40px;
+  }
+  .product-category {
+    text-align: center;
   }
 }
 
@@ -948,6 +1022,9 @@ footer {
     margin: auto;
     margin-top: 40px;
     width: 900px;
+  }
+  .product-category {
+    text-align: center;
   }
 }
 
@@ -985,6 +1062,9 @@ footer {
   }
   .h3-footer {
     font-size: 30px;
+  }
+  .product-category {
+    text-align: center;
   }
 }
 
